@@ -30,7 +30,7 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
-    <version>20190329</version>
+    <version>20190724</version>
     <!-- *************************** -->
     <!-- PROFILES -->
     <!-- *************************** -->
